# Multimodal-RoPEs

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
docs/: rope_hyperparameters.md
multimodal_ropes/: __init__.py  entry.py
multimodal_ropes/configs/: __init__.py  circlerope.py  grape.py  hope.py  ilrope.py  mhrope.py  mmrope.py  mrope.py  mrope_i.py  omnirope.py  v2pe.py  vanilla.py  videorope.py
multimodal_ropes/freq_allocation/: __init__.py  grape.py  hope.py  mhrope.py  mmrope.py  mrope.py  mrope_i.py  vanilla.py  videorope.py
multimodal_ropes/pos_design/: __init__.py  _qwen3vl.py  circlerope.py  hope.py  ilrope.py  mmrope.py  mrope.py  mrope_i.py  omnirope.py  v2pe.py  vanilla.py  videorope.py
tests/: test_qwen35_golden_current.py  test_qwen35_partial_rope.py  test_rope_golden_hf4571.py
tests/golden/: qwen35_rope_current.pt  qwen3vl_rope_hf4571.pt
