[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-ropes"
version = "0.1.0"
description = "Multimodal RoPE implementations"
dependencies = [
    "torch",
    "transformers"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["multimodal_ropes*"]